# Quant

./: .gitignore  .mcp.json  BACKTEST_SUMMARY.md  CHAIN_DETERMINISTIC_TEST_RESULTS.md  CHAIN_MA_BACKTEST_RESULTS.md  CMakeLists.txt  MONTHLY_PUMP_STRATEGY_RESULTS.md  Makefile  Quant.slnx  README.md  TRADING_RUN_RESULTS.md  VSCODE_BUILD.md  all_source.txt  backtest_adaptive.html  backtest_prices.txt  backtest_results.json  backtest_strategy.ps1  comprehensive_trading_run.ps1  convert_goldprices.ps1  diagnose_trades.ps1  execute_backtest.py  execute_gold_chain_trades.ps1  execute_gold_series_mcp.ps1  execute_gold_trades.ps1  execute_monthly_trades.ps1  fix_cuda_build_customizations.bat  full_trading_run.ps1  mcp_add_sample_trades.ps1  monthly_gold_prices.json  quant_backtest.ps1  quant_backtest_results.json  quant_framework_guide.ps1  run_backtest.ps1  run_trading.ps1  server_output.txt  test_single_trade.ps1  test_trade.ps1  trade_signals.json  trading_workflow.ps1
.github/: copilot-instructions.md  copilot-mcp.json
Enzyme-main/enzyme/test/MLIR/ProbProg/: regenerate.mlir
Enzyme-main/enzyme/test/MLIR/ReverseMode/: multiret2.mlir
Quant/: AdminConfig.h  AppContext.h  CMakeLists.txt  ChainOptimizer.h  CudaAccelerator.h  CudaKernels.cu  DiscussionLedger.h  ExitStrategyCalculator.h  GpuLLM.cu  GpuLLM.h  HtmlHelpers.h  HttpApi.h  IdGenerator.h  LLM_ROADMAP.md  MarketEntryCalculator.h  McpSocketServer.h  MultiHorizonEngine.h  PriceSeries.h  ProfitCalculator.h  Quant.cpp  Quant.vcxproj  Quant.vcxproj.filters  QuantMath.h  Routes_Admin.h  Routes_Api.h  Routes_Auth.h  Routes_ChainManager.h  Routes_Chart.h  Routes_Core.h  Routes_Entry.h  Routes_Exit.h  Routes_Horizons.h  Routes_Mcp.h  Routes_Optimizer.h  Routes_Premium.h  Routes_PriceCheck.h  Routes_Profit.h  Routes_SerialGen.h  Routes_Simulator.h  Routes_Symbols.h  (+11 more)
Quant/copy/: ExitStrategyCalculator.h.txt  HtmlHelpers.h.txt  HttpApi.h.txt  MultiHorizonEngine.h.txt  Routes_Api.h.txt  Routes_Chart.h.txt  Routes_Core.h.txt  Routes_Entry.h.txt  Routes_Exit.h.txt  Routes_Horizons.h.txt  Routes_PriceCheck.h.txt  Routes_Profit.h.txt  Routes_SerialGen.h.txt  Routes_Trades.h.txt  TradeDatabase.h.txt
Quant/db/: chain_members.csv  chain_state.csv  entry_points.csv  horizons.csv  managed_chains.json  params.csv  pnl.json  profits.csv  released.csv  trades.csv  trades.json  wallet.csv  wallet.json
Quant/users/: users.json
db/: trades.json  wallet.json
deepseek.cpp-main/: .gitignore  LICENSE.md  Makefile  README.md  convert.py  pyproject.toml  quantizer.cpp  quantizer.py  setup.py
deepseek.cpp-main/src/: codec.cpp  codec.h  infer.cpp  main.cpp  model.cpp  model.h  profile.cpp  profile.h  quant.cpp  quant.h  sampler.cpp  sampler.h  test.cpp  time_utils.cpp  wikitest.cat.1chunk.v2-encoded.txt  wikitest.cat.1chunk.v3-encoded.txt
docker-finance/: .gitignore  CHANGELOG.md  README.md  docker-finance.dox
docker-finance/.gitea/: PULL_REQUEST_TEMPLATE.yaml
docker-finance/.gitea/ISSUE_TEMPLATE/: bug.yaml  question.yaml  request.yaml
docker-finance/.gitea/workflows/: dfi.bash  dfi.yaml
docker-finance/client/: docker-finance.yaml  docker.bash  install.bash
docker-finance/client/Dockerfiles/local/dev-tools/: Dockerfile.dev-tools.in  docker-compose.yml.dev-tools.in
docker-finance/client/Dockerfiles/local/finance/: Dockerfile.archlinux.in  Dockerfile.ubuntu.in  docker-compose.yml.archlinux.in  docker-compose.yml.ubuntu.in
docker-finance/client/Dockerfiles/remote/hledger-suite/: Dockerfile  docker-compose.yml
docker-finance/client/Dockerfiles/remote/root/: Dockerfile.archlinux  docker-compose.yml
docker-finance/client/Doxygen/: Doxyfile  docker-finance.dox
docker-finance/client/conf.d/client/env/: gen.bash
docker-finance/client/conf.d/container/fetch/: fetch.yaml.in
docker-finance/client/conf.d/container/hledger/: hledger.conf.in
docker-finance/client/conf.d/container/meta/: meta.csv.in
docker-finance/client/conf.d/container/shell/: subscript.bash.in  superscript.bash.in
docker-finance/client/plugins/docker/: bitcoin.bash  example.bash  tor.bash
docker-finance/client/src/docker/: completion.bash  docker.bash
docker-finance/client/src/docker/lib/: lib_docker.bash
docker-finance/container/: .clang-format  finance.bash
docker-finance/container/plugins/finance/: example.bash  quant.bash  timew_to_timeclock.bash
docker-finance/container/plugins/root/bitcoin/: bitcoin.cc
docker-finance/container/plugins/root/example/: example.cc
docker-finance/container/plugins/root/quant/: quant.cc
docker-finance/container/src/finance/: completion.bash  finance.bash
docker-finance/container/src/finance/lib/: lib_finance.bash
docker-finance/container/src/hledger-flow/lib/: lib_preprocess.bash  lib_utils.bash
docker-finance/container/src/root/common/: type.hh  utility.hh
docker-finance/container/src/root/macro/: rootlogon.C
docs/: equations.md  failure-modes.md  final.md  gold_price_series.csv  goldprices.csv  goldprices_series.csv  paper.md  sync-architecture.md
docs/site/: index.html
libquant/: CMakeLists.txt
libquant-engine/: CMakeLists.txt
libquant-engine/include/: quant_engine.h  quant_engine_types.h
libquant-engine/src/: quant_engine.cpp
libquant-mcp/: CMakeLists.txt
libquant-mcp/include/: quant_mcp.h
libquant-mcp/src/: quant_mcp.cpp
libquant/include/: quantmath.h
quant-android/: CMakeLists.txt
quant-android/java/com/quant/engine/: QuantEngine.java
quant-android/jni/: quant_jni.cpp
quant-app/: gradlew  gradlew.bat  settings.gradle
quant-app/app/: build.gradle  proguard-rules.pro
quant-app/app/src/main/: AndroidManifest.xml
quant-app/app/src/main/cpp/: CMakeLists.txt
quant-mcp/: CMakeLists.txt  README.md  main.cpp  quant-mcp.vcxproj
quant-server/: Makefile  SyncStore.h  TicketSystem.h  main.cpp
quant-ui/: CMakeLists.txt
quant-ui/include/: quant_ui.h
quant-ui/java/com/quant/ui/: QuantUI.java  QuantWebView.java  UIResponse.java
quant-ui/jni/: quant_mcp_jni.cpp  quant_ui_jni.cpp
quant-ui/src/: quant_ui.cpp
users/: users.json
users/admin/db/: presets.json  wallet.json
(+414 files in other folders)
